# range2

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE
include/iolib/: algorithm.h  array_view.h  concept.h  generator.h  iterator.h  meta.h  optional.h  range.h  stream.h  string_view.h  tuple.h  utility.h
include/stdext/: algorithm.h  array_view.h  compressed_types.h  concept.h  consumer.h  endian.h  file.h  filesystem.h  flags.h  format.h  generator.h  iterator.h  meta.h  multi.h  optional.h  platform.h  preprocessor.h  range.h  scope_guard.h  span.h  stream.h  string.h  string_view.h  traits.h  tuple.h  types.h  unicode.h  utility.h
include/stdext/_impl/: config.h  enable_copy_move.h  optional.inl
include/stdext/detail/: config.h
iolib.xcodeproj/: project.pbxproj
msvc/: stdext.natvis
src/: file.cpp  format.cpp  stream.cpp  string.cpp  string_view.cpp  unicode.cpp  utility.cpp
src/posix/: file.cpp
src/windows/: file.cpp  filesystem.cpp  platform.h
test/: CMakeLists.txt  main.cpp
test/res/: UTF-16-post.txt  UTF-8-post.txt
test/src/: consumer.cpp  flags.cpp  generator.cpp  iterator.cpp  iterators.h  main.cpp  meta.cpp  multi.cpp  optional.cpp  platform.cpp  preprocessor.cpp  scope_guard.cpp  span.cpp  stream.cpp  test_iterators.h  traits.cpp  tuple.cpp  types.cpp  types.h  utf.cpp  utility.cpp
tests/: CMakeLists.txt
tests/stream/: CMakeLists.txt
tests/stream/src/: main.cpp
tests/utf/: CMakeLists.txt  UTF-8-test.txt
tests/utf/res/: UTF-32-post.txt
tests/utf/src/: main.cpp
